--- a/estilo/style.css
+++ b/estilo/style.css
@@ -66,7 +66,8 @@ header p {
 section {
 
             padding-top: 10vh;   
-            min-width: 100px; 
+            min-width: 200px; 
+            font-size: 3.5vw;
             
             
             
