--- a/estilo/style.css
+++ b/estilo/style.css
@@ -67,8 +67,11 @@ section {
 
             padding-top: 10vh;  
             padding-bottom: 10vh; 
+            padding-left: 30px;
+            line-height: 2em;
             min-width: 100px; 
             font-size: 3.5vw;
+            font-family: var(--fonte01);
             
             
             
@@ -92,11 +95,8 @@ a:hover {
 
 section p {
 
-        text-indent: 12px;
-        font-size: 2.5em;
-        text-transform: uppercase;
-        line-height: 2em;
-        font-family: var(--fonte01);
+        padding-bottom: 2em;
+        
 
 }
 
